# flights-backend

./: .gitignore  LICENSE  Makefile  README.md  alembic.ini  config.py  constants.py  my_typing.py  mypy.ini  pyproject.toml  server.py
alembic/: env.py
alembic/versions/: 42aec5ea5c34_create_users_table.py  e343ad807674_.py
api/: booking.py  documents.py  health.py  routes.py  users.py
clients/: amadues_client.py
configuration/: __init__.py  base_configuration.py
db/: database.py  models.py
exceptions/: __init__.py  const.py  exception.py  handler.py  registry.py
files/: iata_codes_db.csv
schemas/: __init__.py  base.py  booking.py  health.py  users.py
services/: booking_repo.py  booking_service.py  documents_processor.py
tests/: conftest.py  test_booking.py  test_documents.py  test_health.py  test_users.py
tests/files/: test-doc.docx
utils/: booking_repo.py  doc_utils.py
